@@ -1,3 +1,10 @@
+2007-11-4 Eloy Duran <e.duran@superalloy.nl>
+
+	* website/index.html,
+	  website/index.txt:
+
+	Updated the website with extra info on installing and info about the "extras".
+
 2007-11-3 Eloy Duran <e.duran@superalloy.nl>
 
 	* License.txt,
